<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/hello" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/launch_count_desc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/significant_event_count_desc" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_invite"
            android:onClick="launchInvite"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_counters"
            android:onClick="resetCounters"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/reset_button_desc" />

    </LinearLayout>
</ScrollView>